# AnimePredictor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
Parser/: CMakeLists.txt  Exporter.cpp  Exporter.h  Parser.cpp
Parser/Tables/: AnimeTable.cpp  UserRatingTable.cpp
Predictor/: CMakeLists.txt  Predictor.cpp  Predictor.h
Predictor/ImGUI/: ImGUI_Entity.h  ImGUI_Manager.cpp  ImGUI_Manager.h
Predictor/ImGUI/Entities/: ImGUI_Analysis.cpp  ImGUI_Analysis.h  ImGUI_EndMain.cpp  ImGUI_EndMain.h  ImGUI_Info.cpp  ImGUI_Info.h  ImGUI_Logger.cpp  ImGUI_Logger.h  ImGUI_Main.cpp  ImGUI_Main.h  ImGUI_StartTraining.cpp  ImGUI_StartTraining.h  ImGUI_Stat.cpp  ImGUI_Stat.h  ImGUI_Training.cpp  ImGUI_Training.h
Predictor/Logger/: LogManager.cpp  LogManager.h
Predictor/Model/: Loader.cpp  Loader.h  Model.cpp  Model.h
Predictor/Parser/: Exporter.cpp  Exporter.h  Parser.cpp  Parser.h
Predictor/Parser/Tables/: AnimeTable.h  UserRatingTable.h
Predictor/Training/: Dockerfile  Training.py
Predictor/Training/model_export/: le_type.pkl  metadata.json  mlb.pkl  model.tflite  results.txt  scaler.pkl
Predictor/Training/model_export/saved_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Predictor/Training/model_export/saved_model/variables/: variables.data-00000-of-00001  variables.index
Predictor/Window/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Predictor/misc/: RGBAColor.cpp  RGBAColor.h  Texture.cpp  Texture.h
Training/: Training.py
